--- a/templates/signup.html
+++ b/templates/signup.html
@@ -77,6 +77,14 @@
         </div>
         <form action="{{ url_for('signup') }}" method="POST">
             <div class="form-group">
+                <label for="first_name">First Name</label>
+                <input type="text" name="first_name" required placeholder="First Name">
+            </div>
+            <div class="form-group">
+                <label for="last_name">Last Name</label>
+                <input type="text" name="last_name" required placeholder="Last Name">
+            </div>
+            <div class="form-group">
                 <label for="email">Email</label>
                 <input type="email" name="email" required placeholder="Enter your email">
             </div>
