--- a/templates/login.html
+++ b/templates/login.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
+    <script src="https://accounts.google.com/gsi/client" async></script>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -40,6 +41,16 @@
             border-radius: 4px;
             box-sizing: border-box;
         }
+        .btn-google {
+            width: 100%;
+            padding: 10px;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+            margin : 10px 0;
+        }
         .btn {
             width: 100%;
             padding: 10px;
@@ -49,7 +60,16 @@
             border-radius: 4px;
             cursor: pointer;
             transition: background-color 0.3s ease;
+            margin : 10px 0;
         }
+        .btn-google:hover {
+            background-color: lucid;
+        }
+        a {
+    all: unset;
+    cursor: pointer;
+    color: #007bff;
+}
         .btn:hover {
             background-color: #0056b3;
         }
@@ -82,6 +102,9 @@
                 <input type="password" name="password" required placeholder="Enter your password">
             </div>
             <button type="submit" class="btn">Log In</button>
+
+            <button type="submit" class="btn-google"><a href="{{url_for('ssologin')}}">Sign In with Google</a></button>
+
         </form>
         <div class="signup-link">
             Don't have an account? <a href="{{ url_for('signup') }}">Sign up</a>
