--- a/templates/signup.html
+++ b/templates/signup.html
@@ -13,6 +13,21 @@
             height: 100vh;
             margin: 0;
         }
+        a {
+            all: unset;
+            cursor: pointer;
+            color: #007bff;
+        }
+      .btn-google {
+            width: 100%;
+            padding: 10px;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+            margin : 10px 0;
+        }
         .signup-container {
             background-color: white;
             padding: 30px;
@@ -93,6 +108,7 @@
                 <input type="password" name="password" required placeholder="Create a strong password">
             </div>
             <button type="submit" class="btn">Sign Up</button>
+            <button type="submit" class="btn-google"><a href="{{url_for('ssologin')}}">Sign In with Google</a></button>
         </form>
         <div class="login-link">
             Already have an account? <a href="{{ url_for('login') }}">Log in</a>
